unpackaged/main/default/objects/Case/fields/Legacy_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Closed_Date__c</fullName>
    <label>Legacy Closed Date</label>
    <type>DateTime</type>
</CustomField>