unpackaged/main/default/objects/Case/fields/legacy_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>legacy_CreatedDate__c</fullName>
    <label>legacy CreatedDate</label>
    <type>DateTime</type>
</CustomField>