unpackaged/main/default/objects/Case/fields/Legacy_First_Response_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legacy_First_Response_Owner__c</fullName>
    <label>Legacy_First Response Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>