unpackaged/main/default/objects/Case/fields/legacy_Has_Comments__c.field-meta.xml
<CustomField>
    <fullName>legacy_Has_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>temporary fields to check which case has or not comments</description>
    <label>legacy Has Comments</label>
    <type>Checkbox</type>
</CustomField>