unpackaged/main/default/objects/Case/fields/Legacy_LENGUID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LENGUID__c</fullName>
    <formula>LEN(GUID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy LENGUID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>