unpackaged/main/default/objects/Case/fields/Legacy_WhoEscalated__c.field-meta.xml
<CustomField>
    <fullName>Legacy_WhoEscalated__c</fullName>
    <label>Legacy_WhoEscalated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>