unpackaged/main/default/objects/Case/fields/LegacySurvey__c.field-meta.xml
<CustomField>
    <fullName>LegacySurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be removed, it is false if survey was not imported, true if it was imported.</description>
    <label>LegacySurvey</label>
    <type>Checkbox</type>
</CustomField>