unpackaged/main/default/objects/Case/fields/LegacyWorkIt__c.field-meta.xml
<CustomField>
    <fullName>LegacyWorkIt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LegacyWorkIt</label>
    <type>Checkbox</type>
</CustomField>