unpackaged/main/default/objects/Case/fields/Live_Event_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Event Coverage</label>
    <referenceTo>Live_Event_Coverage__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>