unpackaged/main/default/objects/Case/fields/Live_Event_Coverage_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Coverage_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Event Coverage Report Sent</label>
    <type>Checkbox</type>
</CustomField>