unpackaged/main/default/objects/Case/fields/Live_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Start_Date__c</fullName>
    <formula>IF(
   NOT(ISBLANK( Live_Event_Coverage__c )),
    DATE(VALUE(TEXT(Live_Event_Coverage__r.Event_Start_Year__c)),VALUE(TEXT(Live_Event_Coverage__r.Event_Start_Month__c)),VALUE(TEXT(Live_Event_Coverage__r.Event_Start_Day__c))),
null
)</formula>
    <label>Live Event Start Date</label>
    <type>Date</type>
</CustomField>