unpackaged/main/default/objects/Case/fields/Matching_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Matching_Closed_Date__c</fullName>
    <formula>AND(
  NOT(
    ISNULL(Legacy_Closed_Date__c)
  ),
  Legacy_Closed_Date__c = ClosedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Closed Date</label>
    <type>Checkbox</type>
</CustomField>