unpackaged/main/default/objects/Case/fields/Missed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Missed_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is set to true when the SLA have been missed.</description>
    <label>Missed SLA</label>
    <type>Checkbox</type>
</CustomField>