unpackaged/main/default/objects/Case/fields/Missed_SLA_date_time__c.field-meta.xml
<CustomField>
    <fullName>Missed_SLA_date_time__c</fullName>
    <label>Missed SLA date time</label>
    <type>DateTime</type>
</CustomField>