unpackaged/main/default/objects/Case/fields/Monitor_My_Case__c.field-meta.xml
<CustomField>
    <fullName>Monitor_My_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clicking enabling this field will send alerts to the CS room for 72 hours.</inlineHelpText>
    <label>Monitor My Case</label>
    <type>Checkbox</type>
</CustomField>