unpackaged/main/default/objects/Case/fields/Monitor_My_Case_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Monitor_My_Case_DateTime__c</fullName>
    <label>Monitor My Case DateTime</label>
    <type>DateTime</type>
</CustomField>