unpackaged/main/default/objects/Case/fields/Month_Opened__c.field-meta.xml
<CustomField>
    <fullName>Month_Opened__c</fullName>
    <formula>CASE(MONTH( DATEVALUE( CreatedDate )),
1,&quot;January&quot;,
2,&quot;February&quot;,
3,&quot;March&quot;,
4,&quot;April&quot;,
5,&quot;May&quot;,
6,&quot;June&quot;,
7,&quot;July&quot;,
8,&quot;August&quot;,
9,&quot;September&quot;,
10,&quot;October&quot;,
11,&quot;November&quot;,
12,&quot;December&quot;,
&quot;ERROR&quot;
)</formula>
    <label>Month Opened</label>
    <type>Text</type>
</CustomField>