unpackaged/main/default/objects/Case/fields/Need_ReMigration__c.field-meta.xml
<CustomField>
    <fullName>Need_ReMigration__c</fullName>
    <formula>AND (
    legacy_CreatedDate__c = CreatedDate,
    Legacy_Closed_Date__c = ClosedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need-ReMigration</label>
    <type>Checkbox</type>
</CustomField>