unpackaged/main/default/objects/Case/fields/Need_to_Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Close_Date_Time__c</fullName>
    <description>It holds the date and time for when the case is flipped to &quot;Need to closed&quot; so we can calculate the new Case age</description>
    <label>Need to Close - Date</label>
    <type>Date</type>
</CustomField>