unpackaged/main/default/objects/Case/fields/needs_manager_review__c.field-meta.xml
<CustomField>
    <fullName>needs_manager_review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>needs manager review</description>
    <inlineHelpText>needs manager review</inlineHelpText>
    <label>Needs manager review</label>
    <type>Checkbox</type>
</CustomField>