unpackaged/main/default/objects/Case/fields/New_Comment__c.field-meta.xml
<CustomField>
    <fullName>New_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Comment</label>
    <type>Checkbox</type>
</CustomField>