unpackaged/main/default/objects/Case/fields/No_Escalation_Feedback_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Escalation_Feedback_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to bypass Escalation Follow-up process</description>
    <label>No Escalation Feedback Required</label>
    <type>Checkbox</type>
</CustomField>