unpackaged/main/default/objects/Case/fields/Notice_1_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Notice_1_Date_Time__c</fullName>
    <label>Notice 1 Date/Time</label>
    <type>DateTime</type>
</CustomField>