unpackaged/main/default/objects/Case/fields/Notice_2_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Notice_2_Date_Time__c</fullName>
    <label>Notice 2 Date/Time</label>
    <type>DateTime</type>
</CustomField>