unpackaged/main/default/objects/Case/fields/Number_Of_Escalations__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Escalations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Escalations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>