unpackaged/main/default/objects/Case/fields/Open_Cases_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases_On_Account__c</fullName>
    <formula>Account.Number_of_Open_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Open Cases On Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>