unpackaged/main/default/objects/Case/fields/Other_Case_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Case_Sub_Reason__c</fullName>
    <label>&quot;Other&quot; Case Sub Reason</label>
    <type>TextArea</type>
</CustomField>