unpackaged/main/default/objects/Case/fields/Override_Missed_SLA__c.field-meta.xml
<CustomField>
    <fullName>Override_Missed_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields overrides &#39;Missed SLA&quot; and correct automatically &quot;MET SLA&quot;. Only Anna and GC can touch it</description>
    <label>Override Missed SLA</label>
    <type>Checkbox</type>
</CustomField>