unpackaged/main/default/objects/Case/fields/Owner_Start_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Owner_Start_of_Day__c</fullName>
    <formula>TEXT(Owner:User.StartDay) + &#39;:00&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&#39;s Start of Day</label>
    <type>Text</type>
</CustomField>