unpackaged/main/default/objects/Case/fields/Parent_Case_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Account__c</fullName>
    <formula>Parent.Account.Name</formula>
    <label>Parent Case Account</label>
    <type>Text</type>
</CustomField>