unpackaged/main/default/objects/Case/fields/Parent_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Owner__c</fullName>
    <formula>Parent.Owner:User.Full_Name__c</formula>
    <label>Parent Case Owner</label>
    <type>Text</type>
</CustomField>