unpackaged/main/default/objects/Case/fields/Parent_Case_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Owner_Region__c</fullName>
    <formula>Parent.Case_Owner_Region__c</formula>
    <label>Parent Case Owner Region</label>
    <type>Text</type>
</CustomField>