unpackaged/main/default/objects/Case/fields/Parent_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Status__c</fullName>
    <formula>/* Parent.Case_Status__c */
TEXT(Parent.Status)</formula>
    <label>Parent Case Status</label>
    <type>Text</type>
</CustomField>