unpackaged/main/default/objects/Case/fields/Parent_Case_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Time_Spent__c</fullName>
    <formula>IF(WorkIt2__Allow_Update__c,TEXT(WorkIt2__Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Seconds__c) &amp; &quot;s &quot;, null)</formula>
    <label>Parent Case Time Spent</label>
    <type>Text</type>
</CustomField>