unpackaged/main/default/objects/Case/fields/Plat_Trigger_Time_SLA__c.field-meta.xml
<CustomField>
    <fullName>Plat_Trigger_Time_SLA__c</fullName>
    <description>Time Trigger used to send Hipchat Updates 5 mins before Plat P1 SLA</description>
    <formula>IF( AND( Account.HCOW__c  ,ISPICKVAL( Priority , &quot;P1&quot;)), 
     (CreatedDate  + 0.01041666), 
     IF(AND( Account.HCOW__c ,ISPICKVAL( Priority , &quot;P2&quot;)), 
        (CreatedDate  + 0.02083333), 
         IF(AND(Account.HCOW__c ,ISPICKVAL( Priority , &quot;P3&quot;)), (CreatedDate  + 0.04166666), null) 
      )  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plat Trigger Time SLA</label>
    <type>DateTime</type>
</CustomField>