unpackaged/main/default/objects/Case/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <description>brightcove player ID</description>
    <label>Player ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>