unpackaged/main/default/objects/Case/fields/Poor_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Poor_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete Escalation?</label>
    <type>Checkbox</type>
</CustomField>