unpackaged/main/default/objects/Case/fields/Process_Followed__c.field-meta.xml
<CustomField>
    <fullName>Process_Followed__c</fullName>
    <label>Process Followed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>