unpackaged/main/default/objects/Case/fields/PROD2GUID__c.field-meta.xml
<CustomField>
    <fullName>PROD2GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>PROD2GUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>