unpackaged/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Select which version this case is in regards to</inlineHelpText>
    <label>Brightcove Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audience Insights</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>Brightcove Campaign</fullName>
            </value>
            <value>
                <fullName>Brightcove Engage</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>HapYak</fullName>
            </value>
            <value>
                <fullName>Ooyala</fullName>
            </value>
            <value>
                <fullName>OTT</fullName>
            </value>
            <value>
                <fullName>Perform</fullName>
            </value>
            <value>
                <fullName>PlayTV</fullName>
            </value>
            <value>
                <fullName>Video Cloud</fullName>
                <default>true</default>
                <label>Video Cloud</label>
            </value>
            <value>
                <fullName>Zencoder</fullName>
            </value>
            <value>
                <fullName>SupportOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>