unpackaged/main/default/objects/Case/fields/Question_Area__c.field-meta.xml
<CustomField>
    <fullName>Question_Area__c</fullName>
    <description>DO NOT TOUCH: used for the Sales Operation community portal</description>
    <label>What can we help you with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reporting &amp; Analysis</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Quote help</fullName>
            </value>
            <value>
                <fullName>Sales Tools &amp; Permissions</fullName>
            </value>
            <value>
                <fullName>Training &amp; Onboarding</fullName>
            </value>
            <value>
                <fullName>Changes to record</fullName>
            </value>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
            <value>
                <fullName>Deal Agreement Inquiries</fullName>
            </value>
            <value>
                <fullName>InfoSec/Security Questions</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
                <isActive>false</isActive>
                <label>CPQ</label>
            </value>
            <value>
                <fullName>Compensation</fullName>
                <isActive>false</isActive>
                <label>Compensation</label>
            </value>
            <value>
                <fullName>Opportunities</fullName>
                <isActive>false</isActive>
                <label>Opportunities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>