unpackaged/main/default/objects/Case/fields/Queue_when_escalation__c.field-meta.xml
<CustomField>
    <fullName>Queue_when_escalation__c</fullName>
    <description>If the case was in a queue and not owned, this field should be selected.</description>
    <label>Queue When Escalated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSR queue</fullName>
            </value>
            <value>
                <fullName>T1 queue</fullName>
                <label>N&amp;U Queue</label>
            </value>
            <value>
                <fullName>T2 Prod queue</fullName>
            </value>
            <value>
                <fullName>T2 Dev queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>