unpackaged/main/default/objects/Case/fields/Real_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Real_Closed_Date__c</fullName>
    <formula>if ( isnull(Legacy_Closed_Date__c), ClosedDate  ,Legacy_Closed_Date__c )</formula>
    <label>Case Closed Date</label>
    <type>DateTime</type>
</CustomField>