unpackaged/main/default/objects/Case/fields/Real_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Real_Created_Date__c</fullName>
    <description>If the case was migrated with a different created date then this will make it easier to reference which created date is the correct one.</description>
    <formula>if( ISNULL(legacy_CreatedDate__c),  CreatedDate  ,  legacy_CreatedDate__c  )</formula>
    <label>Case Created Date</label>
    <type>DateTime</type>
</CustomField>