unpackaged/main/default/objects/Case/fields/Reason_for_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Escalation__c</fullName>
    <label>Reason for Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer expectations not met</fullName>
            </value>
            <value>
                <fullName>Customer needs a call</fullName>
            </value>
            <value>
                <fullName>Priority increase</fullName>
                <label>Customer priority increase</label>
            </value>
            <value>
                <fullName>FEED Escalation</fullName>
            </value>
            <value>
                <fullName>Inaccurate technical ability</fullName>
                <label>Insufficient technical experience</label>
            </value>
            <value>
                <fullName>Internal priority increase</fullName>
            </value>
            <value>
                <fullName>Not a valid business reason</fullName>
            </value>
            <value>
                <fullName>Owner unavailable</fullName>
            </value>
            <value>
                <fullName>Slow response from 3rd party</fullName>
            </value>
            <value>
                <fullName>Slow response from engineering</fullName>
            </value>
            <value>
                <fullName>Slow response from Sales/Billing/Internal team</fullName>
            </value>
            <value>
                <fullName>Slow responses from support</fullName>
            </value>
            <value>
                <fullName>System Incident</fullName>
            </value>
            <value>
                <fullName>Urgent customer event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>